fix button alignment on startpage

--- a/TokenSwap/src/css/index.css
+++ b/TokenSwap/src/css/index.css
@@ -24,3 +24,17 @@
 #contractId-info, #refund-contractId {
     font-weight: bold;
 }
+
+
+.form-group {
+    padding-top: 50px;
+}
+
+.btn-circle.btn-xl {
+    width: 70px;
+    height: 70px;
+    padding: 10px 16px;
+    border-radius: 35px;
+    font-size: 12px;
+    text-align: center;
+}
